--- a/portfolio/portfolio/src/index.css
+++ b/portfolio/portfolio/src/index.css
@@ -20,3 +20,26 @@ body{
   --black-color: #070707;
   
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::selection {
+  background-color: var(--primary-color);
+  color: var(--black-color);
+}
