--- a/portfolio/portfolio/src/index.css
+++ b/portfolio/portfolio/src/index.css
@@ -6,7 +6,7 @@ html{
 
 body{
   font-family: 'Raleway', sans-serif;
-  background-color: #FAF9FF
+  background-color: #faf9ff
 }
 
 @tailwind base;
