--- a/portfolio/portfolio-second/src/index.css
+++ b/portfolio/portfolio-second/src/index.css
@@ -25,6 +25,10 @@
   box-sizing: border-box
 }
 
+html{
+  scroll-behavior: smooth !important;
+}
+
 body{
   font-family: var(--primary-font);
   background-color: var(--primary-bg-color)
