--- a/portfolio/portfolio-second/src/components/SidBar/SidBar.css
+++ b/portfolio/portfolio-second/src/components/SidBar/SidBar.css
@@ -1,34 +1,51 @@
-#scrollbar::-webkit-scrollbar{
-    width: 0;
+/** @format */
+
+#scrollbar::-webkit-scrollbar {
+	width: 0;
 }
 
-.scroll-div li{
-    display: flex;
-    justify-content: space-between;
-    font-size: 13px;
+.scroll-div li {
+	display: flex;
+	justify-content: space-between;
+	font-size: 13px;
 }
-.scroll-div li h6{
-    color: var(--white-color);
+.scroll-div li h6 {
+	color: var(--white-color);
 }
-.scroll-div li span{
-    color: var(--gray-color);
-}
-
-.language-div{
-    display: inline-block;
-    width: 33%;
-    font-size: 13px;
-    margin-bottom: 15px;
+.scroll-div li span {
+	color: var(--gray-color);
 }
 
-
-.skill-label{
-    @apply flex items-center justify-between text-[13px] text-light-gray-color
+.language-div {
+	display: inline-block;
+	width: 33%;
+	font-size: 13px;
+	margin-bottom: 15px;
 }
 
-.skill-progress-bar-div{
-    @apply w-full bg-primary-bg-color mt-1 h-[4px] relative rounded-sm
+.skill-label {
+	@apply flex items-center justify-between text-[13px] text-light-gray-color;
 }
-.skill-progress-bar{
-    @apply  h-full inline-block bg-brand-color absolute rounded-sm
+
+.skill-progress-bar-div {
+	@apply w-full bg-primary-bg-color mt-1 h-[4px] relative rounded-sm;
+}
+.skill-progress-bar {
+	@apply h-full inline-block bg-brand-color absolute rounded-sm;
+}
+
+.other-skill li {
+	position: relative;
+	left: 12px;
+}
+.other-skill li::after {
+	font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+	content: "\f00c";
+	font-size: 9px;
+	color: var(--brand-color);
+	position: absolute;
+	left: -12px;
+	top: 50%;
+	transform: translateY(-50%);
 }
