--- a/portfolio/portfolio-second/src/index.css
+++ b/portfolio/portfolio-second/src/index.css
@@ -31,13 +31,17 @@ html{
 
 body{
   font-family: var(--primary-font);
-  background-color: var(--primary-bg-color)
+  background-color: var(--primary-bg-color);
+  font-size: 13px
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+.scrollbar::-webkit-scrollbar {
+	width: 0;
+}
 
 
 .text-small{
@@ -48,6 +52,26 @@ body{
   @apply from-gradiant-dark-first-color to-gradiant-dark-second-color
 }
 
+.gradiant-bg{
+  background-image:  linear-gradient(159deg,#2d2d3a 0%,#2b2b35 100%);
+}
+
+.acitve-div{
+  transform: translateX(-150px);
+}
+
+
+h1{
+  font-size: 51px;
+  font-weight: 800;
+  line-height: 1.2;
+}
+
+
+h4{
+  font-size: 22px;
+  font-size: 800;
+}
 h6{
   font-size: 13px;
   font-weight: 400;
