--- a/portfolio/portfolio-second/src/App.css
+++ b/portfolio/portfolio-second/src/App.css
@@ -1,3 +1,17 @@
 .active-link{
     transform: translateX(-150px);
 }
+
+.nav-items{
+    padding:  12px 30px;
+    display: inline-block;
+    text-shadow: rgba(250, 250, 252, 0.4) 0px 0px 3px;
+    transform: translateX(80px);
+    opacity: 0;
+    transition: all .7s ease-in-out ;
+}
+
+.active-nav-link {
+    transform: translateX(0);
+    opacity: 1;
+}
