--- a/portfolio/portfolio-second/src/App.css
+++ b/portfolio/portfolio-second/src/App.css
@@ -8,6 +8,7 @@
     text-shadow: rgba(250, 250, 252, 0.4) 0px 0px 3px;
     transform: translateX(80px);
     opacity: 0;
+    text-transform: uppercase;
     transition: all .7s ease-in-out ;
 }
 
