--- a/portfolio/portfolio-second/src/Page/Contact/Contact.css
+++ b/portfolio/portfolio-second/src/Page/Contact/Contact.css
@@ -2,9 +2,7 @@
     @apply h-[50px] pl-[65px] pr-[15px] w-full border-none text-[#fafafc]   flex items-center relative mb-[30px] shadow-[inset_0_1px_4px_0_rgba(15,15,20,.1)]
 }
 
-.textarea-container {
-    @apply h-[150px] pl-[65px] pr-[15px] w-full border-none text-[#fafafc]   flex items-center relative mb-[30px] shadow-[inset_0_1px_4px_0_rgba(15,15,20,.1)]
-}
+
 
 .input-label{
     @apply h-[50px] w-[50px] bg-primary-bg-color absolute left-0 top-0 flex items-center justify-center text-gray-color text-[14px]
@@ -13,3 +11,11 @@
 .input-field{
     @apply w-full h-full bg-transparent outline-none border-none placeholder:text-gray-color
 }
+
+.textarea-container {
+    @apply h-[150px] pl-[65px] pr-[15px] py-2 w-full border-none text-[#fafafc]  flex items-center relative mb-[30px] shadow-[inset_0_1px_4px_0_rgba(15,15,20,.1)]
+}
+.textarea-field {
+    @apply w-full h-full bg-transparent outline-none border-none placeholder:text-gray-color
+}
+
